feat: [P4PU-394] oneidentity 200 response
